--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vastra",
+  "name": "myntra",
   "homepage": "https://rizwana337.github.io/Myntra-Clone---React-Project---k8ajfrzsibgw",
   "version": "0.1.0",
   "private": true,
